Small bug fix on scroll on smaller screen sizes

--- a/css/projectGridStyles.css
+++ b/css/projectGridStyles.css
@@ -153,6 +153,7 @@
     align-items: center;
     width: 100%;
     height: 5em;
+    overflow: hidden;
     padding: 20em var(--grid-padding) 10em;
     z-index: 800;
 }
